--- a/src/Abp.UI.Bootstrap.Server.Theming/Abp.UI.Bootstrap.Server.Theming.csproj
+++ b/src/Abp.UI.Bootstrap.Server.Theming/Abp.UI.Bootstrap.Server.Theming.csproj
@@ -1,24 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-	<Import Project="..\..\configureawait.props" />
-	<Import Project="..\..\common.props" />
-
-	<PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+  <Import Project="..\..\configureawait.props" />
+  <Import Project="..\..\common.props" />
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-
-	<ItemGroup>
-	  <PackageReference Include="Volo.Abp.AspNetCore.Components.Server" Version="4.3.3" />
-	  <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Bundling" Version="4.3.3" />
-	  <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Packages" Version="4.3.3" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Abp.UI.Bootstrap\Abp.UI.Bootstrap.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="wwwroot\" />
-	</ItemGroup>
- 
- 
+  <ItemGroup>
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.Server" Version="8.2.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Bundling" Version="8.2.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Packages" Version="8.2.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Abp.UI.Bootstrap\Abp.UI.Bootstrap.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.8.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
