--- a/src/Abp.UI.Bootstrap/Abp.UI.Bootstrap.csproj
+++ b/src/Abp.UI.Bootstrap/Abp.UI.Bootstrap.csproj
@@ -1,20 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-	<Import Project="..\..\configureawait.props" />
-	<Import Project="..\..\common.props" />
+  <Import Project="..\..\configureawait.props" />
+  <Import Project="..\..\common.props" />
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-
-	<ItemGroup>
-    <PackageReference Include="BootstrapBlazor" Version="5.3.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.7" />
-    <PackageReference Include="Volo.Abp.UI.Navigation" Version="4.3.3" />
-    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="4.3.3" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Components.Web" Version="4.3.3" />
+  <ItemGroup>
+    <PackageReference Include="BootstrapBlazor" Version="8.8.1" />
+    <PackageReference Include="Volo.Abp.UI.Navigation" Version="8.2.1" />
+    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="8.2.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.Web" Version="8.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.7" />
   </ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Layout\" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <Folder Include="Layout\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.8.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
